# ThinWorker-GPT-Sovits-v2ProPlus

./: .gitignore  CHANGES.md  MANIFEST.in  README.md  pyproject.toml
src/thin_tts/: __main__.py  cli.py  config.py  process_ckpt.py  server.py
src/thin_tts/i18n/: i18n.py
src/thin_tts/models/: cnhubert.py  sv.py  t2s_lightning_module.py  t2s_model.py  t2s_utils.py  vits.py
src/thin_tts/modules/: activation.py  attentions.py  core_vq.py  modules.py  mrte_model.py  quantize.py  transformer.py
src/thin_tts/pipeline/: __init__.py  text_preprocessor.py  tts.py
src/thin_tts/text/: __init__.py  chinese2.py  cleaner.py
src/thin_tts/text/LangSegmenter/: langsegmenter.py
src/thin_tts/text/g2pw/: __init__.py
src/thin_tts/text/zh_normalization/: __init__.py
